fixed the bug in the url app is now up and runing

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wea">
         <h1>{{title}}weather</h1>
-        <p>{{status}} and {{temp} &deg;}</p>
+        <p>{{status}} and {{temp}} &deg;</p>
         <p>feels like {{feels_like}} &deg;</p>
 
         <form method="POST">
